--- a/MockupMC3/Base.lproj/Main.storyboard
+++ b/MockupMC3/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q0S-eZ-NfA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RsW-lM-PZc">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -191,6 +191,21 @@
             </objects>
             <point key="canvasLocation" x="4476" y="-467"/>
         </scene>
+        <!--Recording View Controller-->
+        <scene sceneID="4SI-rJ-lJK">
+            <objects>
+                <viewController id="RsW-lM-PZc" customClass="RecordingViewController" customModule="MockupMC3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iI6-Qa-X2F">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kqp-OL-GgF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LRa-zY-lTI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3748" y="-1349"/>
+        </scene>
         <!--Record View Controller-->
         <scene sceneID="0ZN-jG-Sff">
             <objects>
@@ -265,13 +280,6 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSa-Gs-YkQ">
-                                        <rect key="frame" x="165" y="584" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -290,7 +298,6 @@
                         <viewLayoutGuide key="safeArea" id="Xge-mQ-PIO"/>
                     </view>
                     <connections>
-                        <outlet property="indicatorLabel" destination="CSa-Gs-YkQ" id="gLg-4c-REr"/>
                         <outlet property="playButton" destination="kDR-LR-IjB" id="cfL-Pq-4FR"/>
                         <outlet property="recordBackView" destination="c5c-hE-QZh" id="SGN-p3-6ZH"/>
                         <outlet property="recordButton" destination="BYZ-Ie-Tfe" id="ijE-gS-qVH"/>
